welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: ')' expected but '<-' found.
	if (n<-110 && 90<-n) {
             ^nearHundred:9: error: illegal start of simple expression
}
^